chore: scan & repair/delete unknown link roles